cleanup and launch4j config